fix: update scrollbar track color for better visibility

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #56555500;
+  background: #a1a1a1;
 }
 
 /* Handle */
